--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:reset": "node ./src/bin/resetdb.js"
+    "db:reset": "node src/bin/resetdb.js"
   },
   "author": "",
   "license": "ISC",
