--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
