--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "pg": "^8.5.0"
   },
   "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   }
 }
