--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   }
